DZ UI test Middle